# aptos-evm-poc

./: .gitignore  .gitmodules  Makefile  Move.toml  readme.md
lib/: .gitignore  Cargo.toml
lib/src/: main.rs
lib/src/aptos/: mod.rs
lib/src/eth/: mod.rs
sources/: escrow_factory.move  hashlock.move  types.move
tests/: escrow_factory.move  hashlock.move  test_helpers.move
