[package]
name = "fusion-aptos-sdk"
version = "0.1.0"
edition = "2021"
description = "Professional cross-chain SDK for 1inch Fusion+ and Aptos integration"

[dependencies]
alloy = { version = "1.0.13", features = [
  "eips",
  "full",
  "json-rpc",
  "node-bindings",
  "rpc-client",
  "rpc-types-debug",
  "rpc-types-trace",
  "signer-aws",
  "signer-gcp",
  "signer-keystore",
  "signer-ledger",
  "signer-mnemonic",
  "signer-trezor",
  "signer-yubihsm",
] }
alloy-chains = "0.2.0"
alloy-sol-types = "1.3.0"
alloy-contract = "1.0.24"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
eyre = "0.6"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
rand = "0.8"
tiny-keccak = { version = "2.0", features = ["keccak"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.4"

[dev-dependencies]
tokio-test = "0.4"
hex = "0.4"
once_cell = "1.19"
[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }


[[bin]]
name = "fusion-aptos-sdk"
path = "src/main.rs"
